--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/node": "^20.11.28",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "prisma": "^5.11.0",
